@@ -9,6 +9,7 @@
 	</maintainer>
 	<use>
 		<flag name="amr">Use of AMR Narrow Band codec plugin</flag>
+		<flag name="dtls"></flag>
 		<flag name="filters">Enable compilation of filters</flag>
 		<flag name="g726">Support g726 codec</flag>
 		<flag name="g729">Use g726 codec plugin</flag>
@@ -19,7 +20,9 @@
 		<flag name="ortp">Enable usage of <pkg>net-libs/ortp</pkg></flag>
 		<flag name="pcap">Enable usage of <pkg>net-libs/libpcap</pkg></flag>
 		<flag name="silk">Use silk (skype protocol) codec plugin</flag>
+		<flag name="srtp"></flag>
 		<flag name="vpx">Enable vp8 codec</flag>
 		<flag name="video">Enable video support</flag>
+		<flag name="zrtp"></flag>
 	</use>
 </pkgmetadata>
