@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/mediastreamer
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/mediastreamer/ChangeLog,v 1.75 2014/01/18 10:32:07 hwoarang Exp $
+
+  10 Apr 2015; Guillaume Horel <guillaume.horel@gmail.com>
+  mediastreamer-2.11.1.ebuild, metadata.xml:
+  media-libs/mediastreamer: cleanup use flags
 
   18 Jan 2014; Markos Chandras <hwoarang@gentoo.org> mediastreamer-2.9.0.ebuild:
   Bump ortp dependency to 0.21.0. Bug #494766
